--- a/nc-front/src/app/home/home.component.html
+++ b/nc-front/src/app/home/home.component.html
@@ -4,7 +4,7 @@
             <div class="row text-primary">
                 <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4">
                     <div class="px-2">
-                        <h1 class="display-2">Welcome to Naučna Centrala</h1>
+                        <h1 class="display-2">Dobrodosli na Naučnu Centralu</h1>
                       </div>
                 </div>
             </div>
