--- a/nc-front/src/app/show-pdf/show-pdf.component.html
+++ b/nc-front/src/app/show-pdf/show-pdf.component.html
@@ -11,7 +11,7 @@
     <ngx-extended-pdf-viewer [src]="src" useBrowserLocale="true" height="80vh"></ngx-extended-pdf-viewer>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="modal.close('uspeh')">Save</button>
+    <button type="button" class="btn btn-outline-dark" (click)="modal.close('uspeh')">Zatvori</button>
   </div>
 </ng-template>
-<button type="button" class="btn btn-outline-primary" (click)="open(content)">Launch demo modal</button>
+<button type="button" class="btn btn-outline-primary" (click)="open(content)">Prikazi PDF</button>
