--- a/nc-front/src/app/success-page/success-page.component.html
+++ b/nc-front/src/app/success-page/success-page.component.html
@@ -1,1 +1,1 @@
-<h1 class="display-1 text-success">You confirmed your registration successfully!</h1>
+<h1 class="display-1 text-success">Uspesno ste potvrdili registraciju!</h1>
