--- a/nc-front/src/app/registration/registration.component.html
+++ b/nc-front/src/app/registration/registration.component.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row text-blue">
                 <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4">
-                    <h1 class="display-4 py-2 ">Register to NaucnaCentrala</h1>
+                    <h1 class="display-4 py-2 ">Registruj se na Naucnu centralu</h1>
                     <div class="px-2">
                         <form #f="ngForm" (ngSubmit)="onSubmit(f.value, f)" ngNativeValidate>
                           <div *ngFor="let field of formFields"  class="form-group">
