--- a/nc-front/src/app/urednik-journals/urednik-journals.component.html
+++ b/nc-front/src/app/urednik-journals/urednik-journals.component.html
@@ -1,12 +1,29 @@
-<div *ngFor="let casopis of casopisi">
-  <div class="card text-center" style="width: 21.5em;margin:0 auto;">
-  <div class="card-header">
-    Časopis
+<div class="container">
+  <div class="row mt-5">
+    <h2 class="text-primary mb-5">Moji časopisi:</h2>
   </div>
-  <div class="card-body">
-    <h5 class="card-title">{{casopis.naziv}}</h5>
-    <p class="card-text">Issn: {{casopis.issn}}</p>
-    <button  class="btn btn-primary" (click)="onClick(casopis.processInstanceId)" *ngIf="casopis.casopisStatus=='WAITING_FOR_INPUT'">Activate</button>
+  <div class="row ml-auto mr-auto">
+    <div class="col col-md-3 mb-5 mr-5" *ngFor="let casopis of casopisi">
+      <div class="card bg-dark text-light" style="height: 17rem;width: 20rem;">
+        <div class="card-body">
+          <h3 class="card-title">{{casopis.naziv}}</h3>
+          <table class="table text-light">
+            <tr>
+              <td>ISSN: </td>
+              <td>{{casopis.issn}}</td>
+            </tr>
+            <tr>
+              <td>Članarina: </td>
+              <td>{{casopis.cena}} $</td>
+            </tr>
+            <tr>
+              <td>Kome se naplacuje: </td>
+              <td>{{casopis.koPlaca}}</td>
+            </tr>
+          </table>
+          <button  class="btn btn-primary" (click)="onClick(casopis.processInstanceId)" *ngIf="casopis.casopisStatus=='WAITING_FOR_INPUT'">Activate</button>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
 </div>
