--- a/nc-front/src/app/home/home.component.html
+++ b/nc-front/src/app/home/home.component.html
@@ -1,13 +1,23 @@
-<section id="cover" class="min-vh-100">
-    <div id="cover-caption">
-        <div class="container">
-            <div class="row text-primary">
-                <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4">
-                    <div class="px-2">
-                        <h1 class="display-2">Dobrodosli na Naučnu Centralu</h1>
-                      </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+
+<div class="container text-center">
+    <div class="row">
+      <div class="col col-md-3"></div>
+      <div class="col col-md-6">
+        <img src="assets/img/nc-logo.png"/>  
+      </div>
+      <div class="col col-md-3"></div>
+    </div>  
+    <div class="row">
+      <div class="col col-md-3"></div>
+      <div class="col col-md-6">
+        <h2 class="text-dark">Dobrodošli na Naučnu Centralu</h2>
+      </div>
+      <div class="col col-md-3"></div>
+    </div>  
+    <div class="row">
+      <div class="col col-md-3"></div>
+      <div class="col col-md-6 mt-3 darkbackground">
+      </div>
+      <div class="col col-md-3"></div>
+    </div>  
+  </div>
