--- a/nc-front/src/app/login/login.component.html
+++ b/nc-front/src/app/login/login.component.html
@@ -3,18 +3,18 @@
         <div class="container">
             <div class="row text-blue">
                 <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4">
-                    <h1 class="display-4 py-2 ">Log in to NaucnaCentrala</h1>
+                    <h1 class="display-4 py-2 ">Prijavi se na Naucnu centralu</h1>
                     <div class="px-2">
                       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                       	<div class="form-group">
                       		<label>
-                      	    	Username:
+                      	    	Korisnicko ime:
                       		</label>
                       		<input type="text" formControlName="username" required class="form-control">
                       	</div>
                       	<div class="form-group">
                         		<label>
-                      			Password:
+                      			Lozinka:
                       		</label>
                           	<input type="password" formControlName="password" required class="form-control">
                           </div>
