--- a/nc-front/src/app/urednik-journals/urednik-journals.component.html
+++ b/nc-front/src/app/urednik-journals/urednik-journals.component.html
@@ -7,7 +7,7 @@
       <div class="card bg-dark text-light" style="height: 17rem;width: 20rem;">
         <div class="card-body">
           <h3 class="card-title">{{casopis.naziv}}</h3>
-          <table class="table text-light">
+          <table class="table text-dark">
             <tr>
               <td>ISSN: </td>
               <td>{{casopis.issn}}</td>
