--- a/nc-front/src/app/user-tasks/user-tasks.component.html
+++ b/nc-front/src/app/user-tasks/user-tasks.component.html
@@ -8,7 +8,7 @@
       <div class="card bg-dark text-light" style="height: 14rem;width: 20rem;">
         <div class="card-body">
           <h3 class="card-title">{{task.name}}</h3>
-          <table class="table text-light">
+          <table class="table text-dark">
             <tr>
               <td>Naucni rad: </td>
               <td>{{task.rad}}</td>
