--- a/nc-front/src/app/author-select-journal/author-select-journal.component.html
+++ b/nc-front/src/app/author-select-journal/author-select-journal.component.html
@@ -7,7 +7,7 @@
     <div class="col col-md-3 mb-5 mr-5" *ngFor="let key of enumValues">
       <div class="card bg-dark text-light" style="height: 10rem;width: 20rem;">
         <div class="card-body">
-          <table class="table text-light">
+          <table class="table text-dark">
             <tr>
               <td>Naziv: </td>
               <td>{{field.type.values[key]}}</td>
